--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 imagen: imagenSeleccionada
             };
 
-            emailjs.send('tu_service_id', 'tu_template_id', templateParams)
+            emailjs.send('service_qbcal6k', 'Chloe2', templateParams)
                 .then(function(response) {
                     alert('¡Formulario enviado con éxito!');
                 }, function(error) {
