--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <script>
         // Inicializar EmailJS
-        emailjs.init('tu_user_id');  // Reemplaza 'tu_user_id' con tu ID de usuario de EmailJS
+        emailjs.init('nM5mMnOrZJCwTqxb1');  // Reemplaza 'tu_user_id' con tu ID de usuario de EmailJS
 
         const images = [
             'https://i.postimg.cc/FRX7nh5P/Imagen10.jpg', 'https://i.postimg.cc/G2P9W6bb/Imagen11.jpg', 'https://i.postimg.cc/mk8kDMcq/Imagen12.jpg', 
