--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
         .image-container { display: flex; justify-content: center; gap: 20px; margin-top: 20px; }
         img { width: 300px; height: auto; cursor: pointer; border: 3px solid transparent; }
         img:hover { border-color: blue; }
-        #final-image { margin-top: 20px; }
-        #enviar-btn { display: none; }
     </style>
 </head>
 <body>
@@ -31,20 +29,20 @@
             <img id="img2" onclick="selectImage(1)" />
         </div>
         <p id="mensaje"></p>
+        <button id="enviar-btn" style="display: none;" onclick="enviarFormulario()">Enviar</button>
+    </div>
 
-        <!-- Imagen final y botón de enviar -->
-        <div id="final-image" style="display: none;">
-            <h3>Última imagen seleccionada:</h3>
-            <img id="imagen-resultado" width="300" />
-            <button id="enviar-btn" onclick="enviarFormulario()">Enviar</button>
-        </div>
+    <div id="resultado" style="display: none;">
+        <h3>Tu imagen ganadora</h3>
+        <img id="final-image" width="300px" height="auto" />
+        <p id="nombre-usuario"></p>
     </div>
 
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 
     <script>
         // Inicializar EmailJS
-        emailjs.init('nM5mMnOrZJCwTqxb1');  // Reemplaza con tu ID de usuario de EmailJS
+        emailjs.init('nM5mMnOrZJCwTqxb1');  // Reemplaza 'tu_user_id' con tu ID de usuario de EmailJS
 
         const images = [
             'https://i.postimg.cc/FRX7nh5P/Imagen10.jpg', 'https://i.postimg.cc/G2P9W6bb/Imagen11.jpg', 'https://i.postimg.cc/mk8kDMcq/Imagen12.jpg', 
@@ -76,22 +74,30 @@
             if (index < images.length) {
                 if (selected === 0) {
                     // Si la imagen de la izquierda (img1) es seleccionada, la derecha (img2) cambia
-                    ultimaImagenSeleccionada = images[0]; // Imagen izquierda seleccionada
-                    document.getElementById('img2').src = images[index]; // Cambiar la imagen derecha
+                    ultimaImagenSeleccionada = images[0]; // Guardar la imagen seleccionada
+                    document.getElementById('img2').src = images[index];
                 } else {
                     // Si la imagen de la derecha (img2) es seleccionada, la izquierda (img1) cambia
-                    ultimaImagenSeleccionada = images[1]; // Imagen derecha seleccionada
-                    document.getElementById('img1').src = images[index]; // Cambiar la imagen izquierda
+                    ultimaImagenSeleccionada = images[1]; // Guardar la imagen seleccionada
+                    document.getElementById('img1').src = images[index];
                 }
-
                 index++;
 
-                // Si ya no hay más imágenes, mostrar la imagen final seleccionada
+                // Mostrar mensaje con la imagen seleccionada
+                document.getElementById('mensaje').innerText = `Imagen seleccionada: ${images[selected]}`;
+
+                // Si ya no hay más imágenes, mostrar el botón para enviar
                 if (index === images.length) {
-                    document.getElementById('imagen-resultado').src = ultimaImagenSeleccionada;
-                    document.getElementById('final-image').style.display = 'block';
-                    document.getElementById('enviar-btn').style.display = 'block';
                     alert('Has completado la selección');
+                    document.getElementById('test').style.display = 'none';
+                    document.getElementById('resultado').style.display = 'block';
+
+                    // Mostrar la última imagen seleccionada
+                    document.getElementById('final-image').src = ultimaImagenSeleccionada;
+                    document.getElementById('nombre-usuario').innerText = `Nombre del usuario: ${nombrePersona}`;
+
+                    // Mostrar el botón de enviar
+                    document.getElementById('enviar-btn').style.display = 'block';
                 }
             }
         }
@@ -118,3 +124,5 @@
     </script>
 </body>
 </html>
+
+ 
