--- a/index.html
+++ b/index.html
@@ -71,16 +71,17 @@
 
         // Función para seleccionar una imagen
         function selectImage(selected) {
+            // Guardar la imagen seleccionada
+            ultimaImagenSeleccionada = images[selected];
+
             // Eliminar la imagen que no ha sido seleccionada
             if (selected === 0) {
-                ultimaImagenSeleccionada = images[1]; // Guardamos la imagen seleccionada
-                images.splice(1, 1); // Eliminamos la imagen que no fue seleccionada (posición 1)
+                images.splice(1, 1); // Eliminamos la imagen en la posición 1 (la no seleccionada)
             } else {
-                ultimaImagenSeleccionada = images[0]; // Guardamos la imagen seleccionada
-                images.splice(0, 1); // Eliminamos la imagen que no fue seleccionada (posición 0)
+                images.splice(0, 1); // Eliminamos la imagen en la posición 0 (la no seleccionada)
             }
 
-            // Actualizar las imágenes para mostrar las siguientes opciones
+            // Si aún hay más imágenes, actualizamos las que se muestran
             if (images.length > 1) {
                 document.getElementById('img1').src = images[0];
                 document.getElementById('img2').src = images[1];
@@ -91,17 +92,20 @@
 
             // Si ya no hay más imágenes, mostrar el resultado
             if (images.length === 1) {
-                alert('Has completado la selección');
-                document.getElementById('test').style.display = 'none';
-                document.getElementById('resultado').style.display = 'block';
-
-                // Mostrar la última imagen seleccionada
-                document.getElementById('final-image').src = ultimaImagenSeleccionada;
-                document.getElementById('nombre-usuario').innerText = `Nombre del usuario: ${nombrePersona}`;
-
-                // Mostrar el botón de enviar
-                document.getElementById('enviar-btn').style.display = 'block';
+                mostrarResultado();
             }
+        }
+
+        // Función para mostrar la imagen ganadora al final
+        function mostrarResultado() {
+            // Mostrar la última imagen seleccionada como la ganadora
+            document.getElementById('final-image').src = ultimaImagenSeleccionada;
+            document.getElementById('nombre-usuario').innerText = `Nombre del usuario: ${nombrePersona}`;
+
+            // Mostrar el resultado y el botón para enviar el formulario
+            document.getElementById('test').style.display = 'none';
+            document.getElementById('resultado').style.display = 'block';
+            document.getElementById('enviar-btn').style.display = 'block';
         }
 
         // Función para enviar el formulario con el nombre y la imagen seleccionada
